# oopt-gnpy-api

./: README.md  groups  project.config  setup.cfg
.github/workflows/: main.yml
gnpyapi/core/: __init__.py
gnpyapi/core/exception/: exception_handler.py
gnpyapi/core/route/: path_request_route.py  status_route.py
gnpyapi/core/service/: config_service.py  equipment_service.py  path_request_service.py  topology_service.py
gnpyapi/exampledata/: planning_demand_example.json
samples/: fake_sample.py  rest_example.py
tests/: test_api.py
tests/data/req/: planning_demand_example.json  planning_demand_wrong_eqpt.json  planning_demand_wrong_topology.json
tests/data/res/: planning_demand_res.json
tests/service/: test_path_request_service.py
tests/utils/: input.py
