[metadata]
name = gnpyapi
description-file = README.md
description-content-type = text/markdown; variant=GFM
author = Telecom Infra Project
author-email = tbd
license = BSD-3-Clause
home-page = https://github.com/Telecominfraproject/oopt-gnpy-api
project_urls =
    Bug Tracker = https://github.com/Telecominfraproject/oopt-gnpy-api/issues
    Documentation = https://gnpyapi.readthedocs.io/
python-requires = >=3.8
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: System :: Networking
keywords =
    optics
    network
    fiber
    communication
    route
    planning
    optimization
    api

[pbr]
warnerrors = True

[files]
packages = gnpyapi


[options]
install_requires =
    setuptools
    gnpy==2.12.1
    flask>=1.1.2
    Flask-Injector

[options.extras_require]
tests =
    build>=1.0.3,<2
    pytest>=7.4.3,<8
    pyang>=2.6.1,<3

docs =
	alabaster>=0.7.12,<1
	docutils>=0.17.1,<1
	myst-parser>=0.16.1,<1
	Pygments>=2.11.2,<3
	rstcheck
	Sphinx>=5.3.0,<6
	sphinxcontrib-bibtex>=2.4.1,<3
